fix(chat): chatmessage box autogrows on shift-enter

--- a/app/client/stylesheets/components/pu-chat.sass
+++ b/app/client/stylesheets/components/pu-chat.sass
@@ -16,6 +16,9 @@
         height: 100%
         top: 0
         bottom: 0
+        background-color: #fff
+        border-right: 2px solid #eee
+        border-left: 2px solid #eee
         > header
             padding: 33px 32px 19px 32px
             border: 2px solid #eee
@@ -26,9 +29,8 @@
             width: 100%
 
     &-wrapper
-        background: #fff
-        border-right: 2px solid #eee
-        border-left: 2px solid #eee
+        // border-right: 2px solid #eee
+        // border-left: 2px solid #eee
         border-top: 2px solid #eee
         position: absolute
         bottom: 68px
@@ -128,8 +130,8 @@
     footer
         min-height: 69px
         padding: 0px 20px 20px 20px
-        background: #fff
-        border: 2px solid #eee
+        // background: #fff
+        border-bottom: 2px solid #eee
         border-top: 0
         position: absolute
         bottom: 0
@@ -184,20 +186,10 @@
 
     &-main-right
         right: 0
-
-        .pu-chat-wrapper
-            border-top-right-radius: 4px
-
-        footer
-            border-bottom-right-radius: 4px
+        border-top-right-radius: 4px
+        border-bottom-right-radius: 4px
 
     &-main-left
         left: 0
-
-        .pu-chat-wrapper
-            border-top-left-radius: 4px
-
-        footer
-            border-bottom-left-radius: 4px
-
-
+        border-top-left-radius: 4px
+        border-bottom-left-radius: 4px
